--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="logo1.png" type="image/png" />
     <link rel="apple-touch-icon" href="logo1.png" />
     <!-- Env injection -->
-    <meta name="backend-url" content="http://localhost:8080" />
+    <meta name="backend-url" content="https://world-data-explorer.onrender.com" />
     <meta name="mapbox-token" content="pk.eyJ1IjoibXF1YW5nenExIiwiYSI6ImNtZzB1eXJlYTBqazgyam9sZTh1ZmJ1OWcifQ.9UjUgI2KQqHAof-Emtgqgw" />
     <link href="https://api.mapbox.com/mapbox-gl-js/v3.5.1/mapbox-gl.css" rel="stylesheet" />
     <script src="https://api.mapbox.com/mapbox-gl-js/v3.5.1/mapbox-gl.js"></script>
